# KnowBase

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: test-app.yml
alembic/: env.py
alembic/versions/: 30736f246a8b_changed_from_utc_to_timezone_utc_in_.py  52818e3b5702_changed_backend_to_utc_and_added_.py  8d976c30022d_initial_migration.py  cd4104f02be8_removed_content_from_documents.py  fca222003b26_changed_backe_to_utc_and_added_column_.py
app/: __init__.py  dependencies.py  main.py  middleware.py
app/api/: router.py
app/core/: config.py  database.py  exceptions.py  redis.py  security.py
app/models/: base.py
app/modules/audit_logs/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/auth/: dependencies.py  router.py  schemas.py  service.py
app/modules/document_versions/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/documents/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/invites/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/memberships/: __init__.py  models.py  repository.py  router.py  service.py
app/modules/organizations/: models.py  repository.py  (+3 more)
backend/: .dockerignore  Dockerfile  alembic.ini
backend/alembic/: env.py
backend/app/: main.py
backend/tests/: conftest.py  test_auth.py  test_health.py
docs/: er_diagram.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/: proxy.ts
tests/: conftest.py  test_auth.py
(+144 files in other folders)
